--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <li><a href="#services">Services</a></li>
                 <li><a href="#why-us">Why Us</a></li>
                 <li><a href="#contact">Contact</a></li>
-                <li><a href="mailto:benjamen@see-ee-oh.com" class="btn-portal">Get Started</a></li>
+                <li><a href="mailto:exoticminimalist40@gmail.com" class="btn-portal">Get Started</a></li>
             </ul>
             <div class="hamburger" id="hamburger">
                 <span></span>
@@ -90,7 +90,7 @@
                     </div>
                     <h3>AI Automation</h3>
                     <p>Intelligent chatbots and workflow automation powered by cutting-edge AI technology.</p>
-                    <div class="service-price">N$15,000<span>/month</span></div>
+                    <div class="service-price">N$10,000<span>/month</span></div>
                     <ul class="service-features">
                         <li>Multilingual chatbots (English, Oshiwambo, Afrikaans)</li>
                         <li>5,000-25,000 conversations/month</li>
@@ -98,7 +98,7 @@
                         <li>Integration with existing systems</li>
                         <li>24/7 automated support</li>
                     </ul>
-                    <a href="mailto:benjamen@see-ee-oh.com?subject=AI Automation Inquiry" class="btn btn-outline">Get Quote</a>
+                    <a href="mailto:exoticminimalist40@gmail.com?subject=AI Automation Inquiry" class="btn btn-outline">Get Quote</a>
                 </div>
 
                 <!-- Security Operations Card -->
@@ -111,7 +111,7 @@
                     </div>
                     <h3>24/7 Security Monitoring</h3>
                     <p>Real-time threat detection and response to keep your infrastructure secure.</p>
-                    <div class="service-price">N$35,000<span>/month</span></div>
+                    <div class="service-price">N$12,000<span>/month</span></div>
                     <ul class="service-features">
                         <li>Real-time intrusion detection</li>
                         <li>Live security dashboard</li>
@@ -119,7 +119,7 @@
                         <li>Weekly threat intelligence reports</li>
                         <li>Monthly security briefings</li>
                     </ul>
-                    <a href="mailto:benjamen@see-ee-oh.com?subject=Security Monitoring Inquiry" class="btn btn-primary">Get Quote</a>
+                    <a href="mailto:exoticminimalist40@gmail.com?subject=Security Monitoring Inquiry" class="btn btn-primary">Get Quote</a>
                 </div>
 
                 <!-- Digital Forensics Card -->
@@ -132,7 +132,7 @@
                     </div>
                     <h3>Digital Forensics</h3>
                     <p>Expert investigation and court-ready evidence collection for cyber incidents.</p>
-                    <div class="service-price">N$15,000<span>/case</span></div>
+                    <div class="service-price">N$11,000<span>/case</span></div>
                     <ul class="service-features">
                         <li>Employee data theft investigation</li>
                         <li>Financial fraud analysis</li>
@@ -140,7 +140,7 @@
                         <li>Chain of custody documentation</li>
                         <li>Expert witness testimony</li>
                     </ul>
-                    <a href="mailto:benjamen@see-ee-oh.com?subject=Digital Forensics Inquiry" class="btn btn-outline">Get Quote</a>
+                    <a href="mailto:exoticminimalist40@gmail.com?subject=Digital Forensics Inquiry" class="btn btn-outline">Get Quote</a>
                 </div>
 
                 <!-- Compliance Card -->
@@ -160,7 +160,7 @@
                         <li>Monthly compliance scorecards</li>
                         <li>Audit-ready reports</li>
                     </ul>
-                    <a href="mailto:benjamen@see-ee-oh.com?subject=Compliance Management Inquiry" class="btn btn-outline">Get Quote</a>
+                    <a href="mailto:exoticminimalist40@gmail.com?subject=Compliance Management Inquiry" class="btn btn-outline">Get Quote</a>
                 </div>
             </div>
         </div>
@@ -296,7 +296,7 @@
                             </span>
                             <div>
                                 <strong>Email</strong>
-                                <a href="mailto:benjamen@see-ee-oh.com">benjamen@see-ee-oh.com</a>
+                                <a href="mailto:exoticminimalist40@gmail.com">exoticminimalist40@gmail.com</a>
                             </div>
                         </div>
                         <div class="contact-item">
@@ -342,7 +342,7 @@
                     </div>
                 </div>
                 <div class="contact-form-container">
-                    <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                    <form class="contact-form" action="https://formspree.io/f/mjknegbv" method="POST">
                         <h3>Send Us a Message</h3>
                         <div class="form-group">
                             <input type="text" name="name" placeholder="Your Name *" required>
@@ -384,7 +384,7 @@
                     <img src="seeeeoh-lab-logo2.png" alt="SEEEEOH LAB" class="footer-logo">
                     <p>Securing Southern Africa's Digital Future</p>
                     <div class="footer-contact">
-                        <p>benjamen@see-ee-oh.com</p>
+                        <p>exoticminimalist40@gmail.com</p>
                         <p>+264 85 749 9175</p>
                         <p>Windhoek, Namibia</p>
                     </div>
@@ -418,7 +418,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 SEEEEOH LAB (Pty) Ltd. All rights reserved. Founded by Benjamen Elungu.</p>
+                <p>&copy; 2025 SEEEEOH LAB (Pty) Ltd. All rights reserved. Founded by Benjamin Elungu.</p>
             </div>
         </div>
     </footer>
